Fixing alignment and background brightness

--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ progress#chapter-mastery{
   left: 0;
   width: 100%;
   height: 100%;
-  filter: brightness(0.9);
+  backdrop-filter: brightness(0.9);
 }
 .sv-toc__chapter-mastery{
     margin-left: auto;
@@ -149,5 +149,5 @@ progress#chapter-mastery{
 }
 .sv-toc__section-mastery{
     margin-left: auto;
-    margin-right: 6%;
+    margin-right: 5%;
 }
